Update and rename TIM TABLE.HTML to timetable.html

--- a/timetable.html
+++ b/timetable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY TIME TABLE</title>
+	<title>Hajara's TIME TABLE</title>
 </head>
 <body>
 	<Th1><font color="darkcyan" ><center><font size="18">HOME TIME TABLE</font></center>
